--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href= "signup.html"><h4>Sign Up Instead</h4></a>
     </div>
 
-    <div id = "main-elements">
+    <!-- <div id = "main-elements">
       <div id= "profile">
       <div id= "profile-picture">
         </div>
@@ -43,7 +43,7 @@
           <h4 id="address"> Address </h4>
           </div>
         </div>
-    </div>
+    </div> -->
 
 
 
