i connected it to firebasegit add . but im so confusedgit add .

--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,7 @@
     <title>Unofficial Kode with Klossy Pen Pals</title>
      <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="signup.css">
+     <script src="functions/index.js"></script>
   </head>
   <body>
 
@@ -319,6 +320,8 @@
 
 <script>
 
+// SORRY THE JS IS STILL AT THE BOTTOM SOFIA :(
+
 var signUpIntro = $('#sign-up-intro')
 var campForm = $('#camp-form')
 var addDrop=$("#add-drop")
@@ -456,6 +459,8 @@ var hasNumber = /\d/
 
 var logInForm= [firstName, familyName, user, gender, email, pass, confirmPass, address1, addressL2, addressL1, postalCode]
 
+//CHECKS IF ALL ADDRESS AND INFO FIELDS ARE FILLED OUT
+//I TURNED IT OFF BC IT WAS ANNOYING DURING TEST
 
 // for (i = 0; i < logInForm.length; i++ ){
 //   if (logInForm[i] == ""){
