updated but not working still

--- a/extra.html
+++ b/extra.html
@@ -1,33 +1,94 @@
-<h2 class="one-second-text">Welcome!</h2>
-    <h3 class="one-second-text"> What's your Kode with Klossy story?</h3>
-<form id="sign-up-camp-info">
-
-    <div id=questionnaire-1>
-      <h2>I attended Kode with Klossy in</h2>
-      <h4>select multiple if applicable</h4>
-      <div id=year-buttons>
-      <button id="2016">2016</button>
-      <button id="2017">2017</button>
-      <button id="2018">2018</button>
-      <button id="2019">2019</button>
-      <button id="2020">2020</button>
-      </div>
-      <button id="q1-next">Next</button>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Unofficial Kode with Klossy Pen Pals</title>
+     <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="sticker">
+      <img class="sticker" src="giphy.gif">
     </div>
 
-    <div id= "follow-up">
 
+    <div id = "main-elements">
+      <div id= "profile">
+      <div id= "profile-picture">
+        </div>
+      <div id= "profile-info">
+        <img id="profile-picture" src="dog.png">
+          <h3 id="name"></h3>
+          <h4 id="location"> Camp Location </h4>
       </div>
-      </form>
+      <div id= "info">
+        <img src="instagram.png">
+        <img src="twitter.png">
+        <h3> Mail to:</h3>
+          <h4 id="address"> Address </h4>
+          </div>
+        </div>
+        <div id="responses">
+          <ul>
+            <ol>
+              <li id="q1" class="q"></li>
+            <li id="ans1" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q2" class="q"></li>
+            <li id="ans2" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q3" class="q"></li>
+            <li id="ans3" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q4" class="q"></li>
+            <li id="ans4" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q5" class="q"></li>
+            <li id="ans5" class="a"></li>
+            </ol>
+
+        </div>
+    </div>
 
 
 
-<input type="text" name="given-name" placeholder="Preferred Name" required>
-<input type="text" name="family-name" placeholder="Last Name" required>
-<input type="text" name="username" placeholder="Username" required>
-<input type="text" name="password" placeholder="Password" required>
-<input type="text" name="email" placeholder="Email" required>
 
-<input type="text" name="address-line1" placeholder="Address Line 1" required>
 
-</form>
+
+<footer>
+  <h5> © 2020 by Dominique </h5>
+</footer>
+<script>
+
+
+var accounts= {
+    dominique: {
+            name:"Dominique",
+            password:"hehe",
+            location:"Los Angeles",
+            mailingName:"Dominique Demetz",
+            addressLine1:"123 Klossy St",
+            city: "New York",
+            state: "NY",
+            country:"USA",
+            post:"10001",
+          }
+              }
+
+
+$("#name").text(accounts.dominique.name)
+$("#location").text(accounts.dominique.location)
+
+
+
+
+
+</script>
+
+
+  </body>
+</html>
