--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href= "signup.html"><h4>Sign Up Instead</h4></a>
     </div>
 
-    <!-- <div id = "main-elements">
+    <div id = "main-elements">
       <div id= "profile">
       <div id= "profile-picture">
         </div>
@@ -43,7 +43,31 @@
           <h4 id="address"> Address </h4>
           </div>
         </div>
-    </div> -->
+        <div id="responses">
+          <ul>
+            <ol>
+              <li id="q1" class="q"></li>
+            <li id="ans1" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q2" class="q"></li>
+            <li id="ans2" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q3" class="q"></li>
+            <li id="ans3" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q4" class="q"></li>
+            <li id="ans4" class="a"></li>
+            </ol>
+            <ol>
+              <li id="q5" class="q"></li>
+            <li id="ans5" class="a"></li>
+            </ol>
+
+        </div>
+    </div>
 
 
 
